MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/Survey_Tracker__c.object-meta.xml
<CustomObject>
    <label>Survey Tracker</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Survey_Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>