MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/Collector_Id__c.field-meta.xml
<CustomField>
    <fullName>Collector_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collector Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>