MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/CSAT_Broker_Interaction__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Broker_Interaction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSAT Broker Interaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>