MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/CSAT_Next_Steps_Clarity__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Next_Steps_Clarity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSAT Next Steps Clarity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>