MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/CSAT_Overall_Communication__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Overall_Communication__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSAT Overall Communication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>