MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/CSAT_Project_Location__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Project_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSAT Project Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>