MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/CSAT_Property_Price__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Property_Price__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSAT Property Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>