MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/CSAT_Sales_Team_Interaction__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Sales_Team_Interaction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSAT Sales Team Interaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>