MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/CSAT_SalesCenter_Event_Experience__c.field-meta.xml
<CustomField>
    <fullName>CSAT_SalesCenter_Event_Experience__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSAT SalesCenter Event Experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>