MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Survey Tracker</relationshipLabel>
    <relationshipName>Survey_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>