MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/Like_To_Be_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Like_To_Be_Contacted__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Like To Be Contacted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>