MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/NPS_Recommend__c.field-meta.xml
<CustomField>
    <fullName>NPS_Recommend__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>NPS Recommend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>