MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>