MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/Reason_Behind_Rating__c.field-meta.xml
<CustomField>
    <fullName>Reason_Behind_Rating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason Behind Rating</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>