MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>