MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>