MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/Suggestions_Improve_Experience__c.field-meta.xml
<CustomField>
    <fullName>Suggestions_Improve_Experience__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suggestions Improve Experience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>