MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/Survey_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Completed Date</label>
    <type>DateTime</type>
</CustomField>