MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/Survey_Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Survey_Response_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Response Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>