MODON MRE BPDEV/force-app/main/default/objects/Survey_Tracker__c/fields/Trigger_Event__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Event__c</fullName>
    <label>Trigger Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Qualified</fullName>
            </value>
            <value>
                <fullName>Lead Converted</fullName>
            </value>
            <value>
                <fullName>Case Closed</fullName>
            </value>
            <value>
                <fullName>Manual Send</fullName>
            </value>
            <value>
                <fullName>Down Payment Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>